test/should-fail/检查类型-1.j
function bad takes nothing returns undef
    return 0
endfunction
